# ot-harjoitustyo

./: .coveragerc  .env  .gitignore  README.md  pyproject.toml  tasks.py
data/: monoa-db.sqlite3
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/htmlcov/: index.html  src_maksukortti_py.html  src_tests___init___py.html  src_tests_maksukortti_test_py.html  status.json
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
src/: build.py  config.py  demo.py  index.py  utils.py
src/database/: db_connect.py  db_handler.py  db_init.py  monoa-schema.sql
src/entities/: note.py  snip.py  snippet.py
src/services/: monoa_service.py
src/tests/: monoa_service_test.py  note_test.py  snip_test.py  snippet_test.py  utils_test.py
src/ui/: monoa_browser.py  monoa_list_item.py  monoa_modular.py  monoa_note_container.py  monoa_note_viewer.py  monoa_snip_editor.py  monoa_styles.py  monoa_text_edit.py  monoa_ui.py  ui.py
